12 June 2006: Wouter
	- dname_test tpkg with very extensive DNAME testing.

9 June 2006: Wouter
	- after a reload NSD will report the memory churn: number of bytes
	  of memory wasted by the zone transfer code.

8 June 2006: Wouter
	- When zone is re-chosen after a CNAME/DNAME no SERVFAIL is set,
	  noerror is returned instead.
	- zonec will error on multiple DNAMEs for the same name.
	- zonec will error on DNAME and CNAME together.
	- improved loop log message.

7 June 2006: Wouter
	- after DNAME the closest_match is set correctly for another DNAME.
	- in case of a loop returns gracefully instead of crash.
	- nsec3 checks if it is enabled for the zone for wildcards.
	- NSD will give referrals for zone cuts encountered after a CNAME
	  or a DNAME. This also fixed various subtle stuff with CNAME/DNAME
	  and TYPE_DS at zone cuts. It basically re-determines the zone
	  to use after the CNAME/DNAME.

6 June 2066: Wouter
	- zonec checks for data below a DNAME, and will not create the db,
	  as per rfc 2672. Tpkg test to make sure such a zone is not loaded.
	- updated rr-test tpkg so it has no data below a DNAME.
	- DNAME synthesis of CNAME records, including compression for cname.
	- included cname creation in dname test.
	- preallocate the extra temporary domain_type structures.
	- too many temp domains returns OK packet so that the resolver 
	  will recurse and ask us again with the last name in the chain.
	- fixed bug introduced in preallocation on temp domain numbering.

2 June 2006: Wouter
	- dname_replace function that does DNAME replace and unit tests.
	- added error codes from DNSUPD rfc2136 to constants in dns.h.
	- in query.c added DNAME following code.
	- fixed bug 134: hints[i] in nsd.c to hints[0].
	- added tpkg small test for DNAME.
	- tpkg to test bug 134 (starts 100 processes).

1 June 2006: Wouter
	- tsig test with NSD master and NSD slave server. Tsig AXFR transfer.
	  nsd-xfer used to test slave zone contents.